--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 8080
 
 DB_USERNAME = root
-DB_PASSWORD = 
+DB_PASSWORD = mysqlpass203
 DB_DATABASE = my-gin-gorm
 DB_HOST = localhost
 DB_PORT = 3306
