add middleware for authentication
file untuk authentication masih di package handler. Bingung bagaimana cara memberi memory address database dari luar package handler. Kalau sudah bisa, nanti file authentication dipindah ke package middleware

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PASSWORD = mysqlpass203
 DB_DATABASE = my-gin-gorm
 DB_HOST = localhost
 DB_PORT = 3306
+SECRET = sxedcrfvtgbyhnujmik,ol.pIABiugabi
